report4/doc/vocabularium/vitalink/zwangerschapsregistratie/v0.1.4/jsonld-validation.report.md
#||# oslo-jsonld-validator   

#||# -------------------------------------  

2026-09-07T14:36:39.085Z info: [JsonLdValidationService]: Loaded 56 URI prefixes into whitelist

2026-09-07T14:36:39.185Z warn: [JsonLdValidationService]: Found non-whitelisted assigned URI: https://hl7.org/fhir/practitioner-definitions.html#Practitioner for subject: [[urn:oslo-toolchain:56ed058592d1d3a4ac0fa239d47b2e966fe47b2f8c3609d49795da47962e0612](all-zwangerschapsregistratie.jsonld#L1694)](all-zwangerschapsregistratie.jsonld#L318)

2026-09-07T14:36:39.185Z warn: [JsonLdValidationService]: Found non-whitelisted assigned URI: https://build.fhir.org/observation-definitions.html#Observation for subject: [urn:oslo-toolchain:fa484714139b1c7141a7e3f53ab2ac24f22ced13ad0c1097f534036b50e996de](all-zwangerschapsregistratie.jsonld#L356)

2026-09-07T14:36:39.185Z warn: [JsonLdValidationService]: Found non-whitelisted assigned URI: https://hl7.org/fhir/observation-definitions.html#Observation.effective for subject: [urn:oslo-toolchain:effe801b1c57eb33bb4ea6907be4421ed032c4a830a5b503780a12f9ba8f5d0e](all-zwangerschapsregistratie.jsonld#L626)

2026-09-07T14:36:39.186Z warn: [JsonLdValidationService]: Found non-whitelisted assigned URI: https://hl7.org/fhir/observation-definitions.html#Observation.performer for subject: [urn:oslo-toolchain:2afabeaf948a30f38ff4ed2d80af8fbb9dc2c306c3b7adf6035db45b9a0af3b1](all-zwangerschapsregistratie.jsonld#L1214)

2026-09-07T14:36:39.190Z info: [JsonLdValidationService]: Validation found 4 non-whitelisted assigned URIs

2026-09-07T14:36:39.190Z info: [JsonLdValidationService]: Validation successful! All sentences seem to be valid, no spelling mistakes or abbreviations found.

2026-09-07T14:36:39.190Z info: [JsonLdValidationService]: Validation successful! All labels seem to be valid, no spelling mistakes or abbreviations found.

2026-09-07T14:36:39.190Z info: [JsonLdValidationService]: Validation successful! All base URIs seem to be valid.

2026-09-07T14:36:39.190Z info: [JsonLdValidationService]: Validation successful! All referenced classes and attributes seem to be included.

