report4/doc/vocabularium/vitalink/zwangerschapsregistratie/v0.1.5/jsonld-validation.report.md
#||# oslo-jsonld-validator   

#||# -------------------------------------  

2026-09-14T15:47:29.946Z info: [JsonLdValidationService]: Loaded 56 URI prefixes into whitelist

2026-09-14T15:47:30.027Z warn: [JsonLdValidationService]: Found non-whitelisted assigned URI: https://www.hl7.org/fhir/diagnosticreport-definitions.html#DiagnosticReport for subject: [urn:oslo-toolchain:f5810306f2a8059e86d9177065860591d75b4e5812aee974ee88d04df5d68b07](all-zwangerschapsregistratie.jsonld#L318)

2026-09-14T15:47:30.027Z warn: [JsonLdValidationService]: Found non-whitelisted assigned URI: https://hl7.org/fhir/practitioner-definitions.html#Practitioner for subject: [[urn:oslo-toolchain:56ed058592d1d3a4ac0fa239d47b2e966fe47b2f8c3609d49795da47962e0612](all-zwangerschapsregistratie.jsonld#L1980)](all-zwangerschapsregistratie.jsonld#L354)

2026-09-14T15:47:30.027Z warn: [JsonLdValidationService]: Found non-whitelisted assigned URI: https://build.fhir.org/observation-definitions.html#Observation for subject: [urn:oslo-toolchain:fa484714139b1c7141a7e3f53ab2ac24f22ced13ad0c1097f534036b50e996de](all-zwangerschapsregistratie.jsonld#L392)

2026-09-14T15:47:30.027Z warn: [JsonLdValidationService]: Found non-whitelisted assigned URI: https://hl7.org/fhir/observation-definitions.html#Observation.effective for subject: [urn:oslo-toolchain:effe801b1c57eb33bb4ea6907be4421ed032c4a830a5b503780a12f9ba8f5d0e](all-zwangerschapsregistratie.jsonld#L712)

2026-09-14T15:47:30.027Z warn: [JsonLdValidationService]: Found non-whitelisted assigned URI: https://hl7.org/fhir/observation-definitions.html#Observation.issued for subject: [urn:oslo-toolchain:1cbe79cf29e0f3043b0fd7daaf7d13d516f7640bda1497b88a0adda6051fff6f](all-zwangerschapsregistratie.jsonld#L1676)

2026-09-14T15:47:30.028Z warn: [JsonLdValidationService]: Found sentence without a '.': 'De Persoon die de Zwangerschap draagt.$ea_notes=Zwangerschap.heeftPersoon' for subject: [urn:oslo-toolchain:b21cfe5d21bf30084948935c12aff0f6d45117c91fa9bba74bcecd3016914b17](all-zwangerschapsregistratie.jsonld#L1400)

2026-09-14T15:47:30.031Z info: [JsonLdValidationService]: Validation found 5 non-whitelisted assigned URIs

2026-09-14T15:47:30.031Z info: [JsonLdValidationService]: Validation found 1 sentences with spelling mistakes or abbreviations.

2026-09-14T15:47:30.032Z info: [JsonLdValidationService]: Validation successful! All labels seem to be valid, no spelling mistakes or abbreviations found.

2026-09-14T15:47:30.032Z info: [JsonLdValidationService]: Validation successful! All base URIs seem to be valid.

2026-09-14T15:47:30.032Z info: [JsonLdValidationService]: Validation successful! All referenced classes and attributes seem to be included.

